--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ ul{
     margin-top: 0;
     margin-bottom: 0;
 }
-.link-contacts-mail {
+.contacts__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -138,12 +138,6 @@ ul{
     transition-property: color;
     transition-duration: var(--transition-duration);
     transition-timing-function: var(--timing-function);
-}
-.link-contacts-mail:hover{
-    color: var(--accent);
-}
-.link-contacts-mail:focus{
-    color:var(--accent);
 }
 .link-contacts-tel {
     font-weight: 500;
@@ -160,23 +154,21 @@ ul{
     transition-duration: var(--transition-duration);
     transition-timing-function: var(--timing-function);
 }
-.link-contacts-tel:hover{
+.contacts__link:hover{
     color: var(--accent);
 }
-.link-contacts-tel:focus{
-    color: var(--accent);
+.contacts__link:focus{
+    color:var(--accent);
 }
-.item-contacts-mail{
+
+.contacts__item:first-child{
     margin-right: 50px;
 }
-.icon-mail{
+.contacts__icon{
 fill: currentColor;
 margin-right: 10px;
 }
-.icon-phone{
-fill: currentColor;
-margin-right: 10px;
-}
+
 
 /*hero styles*/
 .hero {
@@ -196,7 +188,7 @@ margin-right: 10px;
     text-align: center;
     
 }
-.hero-title {
+.hero__title {
     margin: auto;
     margin-bottom: 30px;
     width: 696px;
@@ -208,7 +200,7 @@ margin-right: 10px;
     text-transform: uppercase;
     color:var(--text-color);
 }
-.hero-btn {
+.hero__btn {
     width: 200px;
     height: 50px;
     font-size: 16px;
@@ -222,240 +214,25 @@ margin-right: 10px;
     border: none;
     border-radius: 4px;
 }
-.backdrop{
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color:rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    transition: opacity var(--timing-function) var(--transition-duration);
-}
-.backdrop.is-hidden{
-    opacity: 0;
-    pointer-events: none;
-   
-}
-.modal{
-    padding: 40px;
-    display: block;
-    text-align: center;
-    min-width:528px ;
-    min-height:581px ;
-    background-color:rgba(255, 255, 255, 1) ;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    
-}
-.modal-button{
-    position: absolute;
-    top:17px;
-    right: 17px;
-    background-color: var(--secondary-background-color);
-    color: rgba(0, 0, 0, 0.1);
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    border-color: rgba(0, 0, 0, 0.1);
-    transition-property: fill;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-    cursor: pointer;
-}
-.modal-button:hover{
-    fill: var(--accent);
-}
-.modal-button:focus{
-    fill: var(--accent);
-}
-.form-title{
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    color: rgba(33, 33, 33, 1);
-    line-height: 1.2;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 12px;
-}
 
-.modal-form{
-    display: block;
-    text-align: center;
-}
-
-.modal-field{
-    position:relative;
-    display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-bottom: 10px;
-}
-.form-icon{
-    position: absolute;
-    top: 55%;
-    left: 15px;
-    fill: rgba(33, 33, 33, 1);
-    transition-property: fill;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-}
-.modal-label{
-    display: block;
-    margin-bottom: 4px;
-    
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.2;
-    color: rgba(117, 117, 117, 1);
-}
-.modal-input{
-    
-    width: 100%;
-    height: 40px;
-    padding-left: 42px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border-radius: 3%;
-    outline: transparent;
-    border:solid 1px rgba(33, 33, 33, 0.2);
-    transition-property: border-color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-}
-.modal-input:hover{
-    border-color: var(--accent);
-}
-.modal-input:focus {
-    border-color: var(--accent);
-}
-.modal-input:hover +.form-icon{
-    fill: var(--accent); 
-}
-.modal-input:focus+.form-icon {
-    fill: var(--accent);
-}
-.modal-textarea{
-    width:100%;
-    height: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
-    
-}
-.modal-area:focus{
-    border-color: var(--accent);
-}
-.modal-area:hover {
-    border-color: var(--accent);
-}
-.modal-area{
-    width: 100%;
-    height: 120px;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    resize: none;
-    border-radius: 3%;
-    outline: transparent;
-    border: solid 1px rgba(33, 33, 33, 0.2);
-
-    transition-property: border-color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-}
-.form-text{
-    margin-left: 8.38px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.7;
-    color: var(--secondary-text-color);
-}
-.checkbox-field{
-    position: relative;
-    display: flex;  
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-}
-.form-link{
-    color: var(--accent);
-}
-.checkbox{
-    appearance: none;
-    position: absolute;
-}
-.checkbox:checked+.agreement-icon{
-    background-color: var(--accent);
-    border: none;
-}
-
-.agreement-icon{
-    border:1px solid rgba(33, 33, 33, 1);
-    display: inline-block;
-    top: 16%;
-    left: -1px;
-    transition-property: border-color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-}
-.checkbox:hover+.agreement-icon{
-    border-color: var(--secondary-accent);
-}
-.checkbox:focus+.agreement-icon {
-    border-color: var(--secondary-accent);
-}
-
-.form-button{
-    width: 200px;
-    height: 50px;
-    padding-left:56px ;
-    padding-right: 55px;
-    padding-top:10px ;
-    padding-bottom:10px ;
-    margin-bottom: 0;
-   
-    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.15);
-    background-color: var(--accent);
-    color: var(--text-color);
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.9;
-    border-style: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition-property: background-color;
-    transition-duration: var(--transition-duration);
-    transition-timing-function: var(--timing-function);
-}
-.form-button:hover {
-background-color: var(--secondary-accent);
-}
 /*features*/
-.list-features {
+.features__list {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color:var(--secondary-text-color);
     display: flex;
 }
-.item-features{
+.features__item{
     display: block;
     width: 270px;
     margin-right: 30px;
    }
-.item-features:last-child {
+.features__item:last-child {
     margin-right: 0;}
     
 
-.title-features {
+.features__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -464,7 +241,7 @@ background-color: var(--secondary-accent);
     color:var(--main-text-color);
     margin-bottom: 10px;
 }
-.features-box{
+.features__box{
     width: 270px;
     height:120px;
     margin-bottom: 30px;
@@ -481,28 +258,29 @@ background-color: var(--secondary-accent);
     padding-top: 0;
 }
 
-.section-title {
+.work__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
     text-align: center;
     letter-spacing: 0.03em;
     color:var(--main-text-color);
+    margin-bottom: 50px;
 }
-.work-list{
+.work__list{
     display: flex;
 }
-.work-item{
+.work__item{
     
     width: 370px;
     margin-right: 30px;
     position: relative;
 }
-.work-item:last-child{
+.work__item:last-child{
     margin-right: 0;
 }
 
-.text-option{
+.work__text{
     position:absolute;
     bottom: 0;
     left: 0;
@@ -522,25 +300,29 @@ background-color: var(--secondary-accent);
 }
 
 /*team*/
-.section-title{
+.team__title{
     margin-bottom: 50px;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    
 }
 .team{
     background-color: var(--main-background-color);
 }
-.team-list{
+.team__list{
     display: flex;
 }
-.team-item{
+.team__item{
     background-color: var(--secondary-background-color);
     width: 270px;
     margin-right:30px;
     box-shadow: 0 2px rgba(0, 0, 0, 0.3);
 }
-.team-item:last-child{
+.team__item:last-child{
     margin-right: 0;
 }
-.team-subtitle{
+.team__subtitle{
         font-size: 16px;
         font-weight: 500;
         line-height: 1.2;
@@ -549,7 +331,7 @@ background-color: var(--secondary-accent);
         text-align: center;
         color: var(--main-text-color);
 }
-.position{
+.team__position{
         font-size: 16px;
         font-weight: 400;
         line-height: 1.2;
@@ -558,12 +340,12 @@ background-color: var(--secondary-accent);
         color: var(--secondary-text-color);
         margin-bottom: 16px;
 }
-.team-box{
+.team__box{
     padding-top:30px;
     padding-bottom: 30px;
 }
 /*social-icons*/
-.social-link{
+.social__link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -576,21 +358,21 @@ background-color: var(--secondary-accent);
     transition-duration: var(--transition-duration);
     transition-timing-function: var(--timing-function);
 }
-.social-link:hover{   
+.social__link:hover{   
     background-color: var(--accent);
     fill: var(--secondary-background-color);
 }
-.social-link:focus{
+.social__link:focus{
     background-color: var(--accent);
     fill: var(--secondary-background-color);
 }
-.social-list{
+.social__list{
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
-.social-item:not(:last-child){
+.social__item:not(:last-child){
 margin-right: 10px;
 }
 /*clients*/
@@ -949,4 +731,219 @@ margin-right: 30px;
     border-left:1px solid var(--secondary-border-color) ;
 }
 
+.backdrop{
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity var(--timing-function) var(--transition-duration);
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+   
+}
+.modal{
+    padding: 40px;
+    display: block;
+    text-align: center;
+    min-width:528px ;
+    min-height:581px ;
+    background-color:rgba(255, 255, 255, 1) ;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    
+}
+.modal-button{
+    position: absolute;
+    top:17px;
+    right: 17px;
+    background-color: var(--secondary-background-color);
+    color: rgba(0, 0, 0, 0.1);
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border-color: rgba(0, 0, 0, 0.1);
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+    cursor: pointer;
+}
+.modal-button:hover{
+    fill: var(--accent);
+}
+.modal-button:focus{
+    fill: var(--accent);
+}
+.form-title{
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgba(33, 33, 33, 1);
+    line-height: 1.2;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 12px;
+}
 
+.modal-form{
+    display: block;
+    text-align: center;
+}
+
+.modal-field{
+    position:relative;
+    display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 10px;
+}
+.form-icon{
+    position: absolute;
+    top: 55%;
+    left: 15px;
+    fill: rgba(33, 33, 33, 1);
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+}
+.modal-label{
+    display: block;
+    margin-bottom: 4px;
+    
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+    color: rgba(117, 117, 117, 1);
+}
+.modal-input{
+    
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border-radius: 3%;
+    outline: transparent;
+    border:solid 1px rgba(33, 33, 33, 0.2);
+    transition-property: border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+}
+.modal-input:hover{
+    border-color: var(--accent);
+}
+.modal-input:focus {
+    border-color: var(--accent);
+}
+.modal-input:hover +.form-icon{
+    fill: var(--accent); 
+}
+.modal-input:focus+.form-icon {
+    fill: var(--accent);
+}
+.modal-textarea{
+    width:100%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    
+}
+.modal-area:focus{
+    border-color: var(--accent);
+}
+.modal-area:hover {
+    border-color: var(--accent);
+}
+.modal-area{
+    width: 100%;
+    height: 120px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    resize: none;
+    border-radius: 3%;
+    outline: transparent;
+    border: solid 1px rgba(33, 33, 33, 0.2);
+
+    transition-property: border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+}
+.form-text{
+    margin-left: 8.38px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7;
+    color: var(--secondary-text-color);
+}
+.checkbox-field{
+    position: relative;
+    display: flex;  
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+.form-link{
+    color: var(--accent);
+}
+.checkbox{
+    appearance: none;
+    position: absolute;
+}
+.checkbox:checked+.agreement-icon{
+    background-color: var(--accent);
+    border: none;
+}
+
+.agreement-icon{
+    border:1px solid rgba(33, 33, 33, 1);
+    display: inline-block;
+    top: 16%;
+    left: -1px;
+    transition-property: border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+}
+.checkbox:hover+.agreement-icon{
+    border-color: var(--secondary-accent);
+}
+.checkbox:focus+.agreement-icon {
+    border-color: var(--secondary-accent);
+}
+
+.form-button{
+    width: 200px;
+    height: 50px;
+    padding-left:56px ;
+    padding-right: 55px;
+    padding-top:10px ;
+    padding-bottom:10px ;
+    margin-bottom: 0;
+   
+    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.15);
+    background-color: var(--accent);
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.9;
+    border-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition-property: background-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+}
+.form-button:hover {
+background-color: var(--secondary-accent);
+}
