--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,4 @@
-:root{
-    --main-text-color: #212121;
-    --secondary-text-color: #757575;
-    --text-color: #FFFFFF;
-    --accent: #2196F3;
-    --secondary-accent: #188CE8;
-    --main-background-color:#F5F4FA;
-    --secondary-background-color:#FFFFFF;
-    --additional-color:#2F303A;
-    --border-color:#ECECEC;
-    --main-border-color: #AFB1B8;
-    --secondary-border-color:#EEEEEE;
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --transition-duration: 250ms;
-}
+
 .page{
     background-color: #FFFFFF;
     font-family: Roboto,sans-serif;
@@ -642,34 +628,34 @@ social__item:not(:last-child) {
 }
 
 
-.subtitle{
+.portfolio__subtitle{
     font-size: 18px;
     line-height:2;
     letter-spacing: 0.06em;
     color: var(--main-text-color);
 }
-.portfolio-container{
+.portfolio__list{
     display: flex;
     flex-wrap: wrap;
     padding-left: 0;
 }
-.portfolio-item{
+.portfolio__item{
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
-.portfolio-item:nth-child(3n){
+.portfolio__item:nth-child(3n){
     margin-right: 0;
 }
-.portfolio-link{
+.portfolio__link{
     text-decoration: none;
     display: block;
     transition-property: box-shadow;
     transition-duration: var(--transition-duration);
     transition-timing-function: var(--timing-function);
 }
-.card{
+.portfolio__card{
     position: relative;
     overflow: hidden;
 }
@@ -698,34 +684,34 @@ social__item:not(:last-child) {
     opacity: 0;
     transition:opacity, transform ;
 }
-.portfolio-link:hover .portfolio-text {
+.portfolio__link:hover .portfolio-text {
     opacity: 1;
 }
-.portfolio-link:focus .portfolio-text{
+.portfolio__link:focus .portfolio-text{
     opacity: 1;
 }
 
-.portfolio-link:hover .overlay {
+.portfolio__link:hover .overlay {
     transform: translateY(0);
     transition: transform var(--transition-duration);
 }
-.portfolio-link:focus .overlay {
+.portfolio__link:focus .overlay {
     transform: translateY(0);
     transition: transform var(--transition-duration);
 }
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio__link:hover,
+.portfolio__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-content{
+.portfolio__content{
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
-.portfolio-box{
+.portfolio__box{
     padding-right: 24px;
     padding-left: 24px;
     padding-top: 20px;
@@ -735,6 +721,8 @@ social__item:not(:last-child) {
     border-left:1px solid var(--secondary-border-color) ;
 }
 
+
+/*modal*/
 .backdrop{
     z-index: 10;
     position: fixed;
@@ -751,6 +739,7 @@ social__item:not(:last-child) {
     pointer-events: none;
    
 }
+
 .modal{
     padding: 40px;
     display: block;
