--- a/css/main.css
+++ b/css/main.css
@@ -13,4 +13,38 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --transition-duration: 250ms;
 }
+
+.page {
+  background-color: #FFFFFF;
+  font-family: Roboto,sans-serif;
+}
+
+h1, h2, h3, p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*# sourceMappingURL=main.css.map */
