--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+container{
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .page{
     background-color: #FFFFFF;
@@ -21,13 +28,7 @@ img{
 /*accent #2196F3*/
 /*header styles*/
 
-.container{
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 .header{
     background-color: var(--text-color);
     border-bottom: 1px solid var(--border-color);
