--- a/.vscode/scss/main.scss
+++ b/.vscode/scss/main.scss
@@ -4,5 +4,10 @@
 
 //base styles
 @import './base/common';
-@import './base/container';
 @import './base/reset';
+@import './base/container';
+
+
+//components
+
+//layouts
