--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ container{
     margin-right: auto;
 }
 
-.page{
+page{
     background-color: #FFFFFF;
     font-family: Roboto,sans-serif;
 }
@@ -18,7 +18,7 @@ img{
     max-width: 100%;
     height: auto;
 }
-.section{
+section{
     padding-top: 94px;
     padding-bottom: 94px;
 }
