--- a/.vscode/scss/utils/_vars.scss
+++ b/.vscode/scss/utils/_vars.scss
@@ -12,4 +12,6 @@
     --secondary-border-color:#EEEEEE;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --transition-duration: 250ms;
+    --accent-color:#777777;
+    --border-accent:teal;
 }
