--- a/.vscode/scss/base/_reset.scss
+++ b/.vscode/scss/base/_reset.scss
@@ -4,3 +4,12 @@ ul{
     margin: 0;
     padding: 0;
     }
+    h1, h2, h3, p{
+        margin: 0;
+    }
+    img{
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+    
