--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
   font-family: Roboto,sans-serif;
 }
 
-.section {
+section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -31,4 +31,5 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 /*# sourceMappingURL=main.css.map */
