--- a/.vscode/scss/base/_common.scss
+++ b/.vscode/scss/base/_common.scss
@@ -2,7 +2,7 @@
     background-color: #FFFFFF;
     font-family: Roboto,sans-serif;
 }
-section{
+.section{
     padding-top: 94px;
     padding-bottom: 94px;
 }
