--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,11 @@
   padding-bottom: 94px;
 }
 
+.work-section {
+  padding-top: 0;
+  padding-bottom: 94px;
+}
+
 .title {
   margin-bottom: 50px;
   font-weight: 700;
@@ -32,6 +37,19 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+}
+
+.hero__title {
+  margin: auto;
+  margin-bottom: 30px;
+  width: 696px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--text-color);
 }
 
 .features__title {
