--- a/.vscode/scss/main.scss
+++ b/.vscode/scss/main.scss
@@ -10,3 +10,5 @@
 //components
 @import './components/button';
 @import './components/socials';
+@import './components/logo';
+@import './components/modal';
