--- a/.vscode/scss/main.scss
+++ b/.vscode/scss/main.scss
@@ -12,3 +12,12 @@
 @import './components/socials';
 @import './components/logo';
 @import './components/modal';
+
+//layouts
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/features';
+@import './layouts/work';
+@import './layouts/team';
+@import './layouts/clients';
+@import './layouts/footer';
