--- a/.vscode/scss/components/_button.scss
+++ b/.vscode/scss/components/_button.scss
@@ -31,3 +31,51 @@
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+//portfolio
+.catalog__btn{
+    padding: 6px 22px;
+    border: none;
+    border-radius: 6px;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    text-align: center;
+    background:var(--main-background-color);
+    color: var(--main-text-color);
+    transition-property: box-shadow, color, background-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--timing-function);
+
+&:hover,
+&:focus{
+    background: var(--accent);
+    color: var(--secondary-background-color);
+    cursor: pointer;
+    box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+}}
+
+.catalog__all-btn{
+        padding: 6px 22px;
+        border: none;
+        border-radius: 6px;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.6;
+        letter-spacing: 0.03em;
+        text-align: center;
+        background: var(--accent);
+        color:var(--text-color);
+        transition-property: box-shadow,color,background-color;
+        transition-duration:var(--transition-duration);
+        transition-timing-function: var(--timing-function);
+
+&:hover,
+&:focus {
+    background: var(--main-background-color);
+    color:var(--main-text-color);
+    cursor: pointer; 
+    box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+}}
