--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ ul{
     color:var(--main-text-color);
 }
 */
+
 .navigation__list{
     display: flex;
     padding: 0;
@@ -185,7 +186,7 @@ margin-right: 10px;
 }*/
 
 /*hero styles*/
-.hero {
+hero {
     width: 1600px;
     background-color: var(--additional-color);
     background-image:
