--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ hero {
     background-color: var(--additional-color);
     background-image:
     linear-gradient(to bottom, rgba(47,48,58,0.4), rgba(47,48,58,0.4)),
-    url(../images/hero\ img.jpg);
+    url(/images/hero\ img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:1600px;
