--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ ul{
 .header__colortext{
     color:var(--main-text-color);
 }
-*/
+
 
 .navigation__list{
     display: flex;
@@ -172,7 +172,7 @@ link-contacts-tel:hover{
 }
 link-contacts-tel:focus{
     color: var(--accent);
-}*/
+}
 .contacts__item:first-child{
     margin-right: 50px;
 }
@@ -185,7 +185,10 @@ fill: currentColor;
 margin-right: 10px;
 }*/
 
-/*hero styles*/
+/*hero styles
+
+
+
 hero {
     width: 1600px;
     background-color: var(--additional-color);
@@ -230,7 +233,7 @@ hero__title {
     border: none;
     border-radius: 4px;
 }
-*/
+
 
 .features__list {
     font-size: 14px;
@@ -269,7 +272,9 @@ hero__title {
     fill: var(--main-text-color);
     background-color: var(--main-background-color)
 }
-/*work*/
+/*work
+
+
 .work {
     background-color: var(--text-color);
     padding-top: 0;
@@ -285,7 +290,7 @@ hero__title {
     letter-spacing: 0.03em;
     color:var(--main-text-color);
 }
-*/
+
 .work__list{
     display: flex;
 }
@@ -318,7 +323,9 @@ hero__title {
     background-color: rgba(47, 48, 58, 0.8);
 }
 
-/*team*/
+/*team
+
+
 
 .team{
     background-color: var(--main-background-color);
@@ -389,7 +396,9 @@ hero__title {
 margin-right: 10px;
 }
 */
-/*clients*/
+/*clients*
+
+
 
 .clients__list{
 display:flex;
@@ -422,7 +431,9 @@ margin-right: 30px;
     fill: var(--accent);
 }
 
-/*footer*/
+/*footer
+
+
 
 .footer{
     padding-top: 60px;
@@ -449,7 +460,9 @@ margin-right: 30px;
 .footer__colortext {
     color: var(--text-color);
 }
-*/
+
+
+
 .address{
     margin-top: 20px;
 }
@@ -494,7 +507,9 @@ margin-right: 30px;
 tel:hover,
 mail:focus{
     color: var(--accent);
-}*/
+}
+
+
 .address-box{
     margin-right: 70px;
     justify-content: center;
@@ -538,7 +553,7 @@ social__text{
 .social__link--footer:focus{
     background-color: var(--accent);
 }
-*/
+
 
 .submit{
     margin-top: 0;
@@ -592,7 +607,10 @@ social__text{
     margin-left: 10px;
     fill: var(--secondary-background-color);
 }
-/*portfolio*/
+/*portfolio
+
+
+
 .portfolio{
     padding-top: 94px;
     padding-bottom: 94px;
