--- a/css/styles.css
+++ b/css/styles.css
@@ -607,10 +607,7 @@ social__text{
     margin-left: 10px;
     fill: var(--secondary-background-color);
 }
-/*portfolio
-
-
-
+/*portfolio*/
 .portfolio{
     padding-top: 94px;
     padding-bottom: 94px;
