--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,514 @@ ul {
           align-items: baseline;
 }
 
+.hero__btn {
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: 700;
+  font-family: inherit;
+  background: var(--accent);
+  color: var(--text-color);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+
+.submit-button {
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 29px;
+  padding-right: 8px;
+  background-color: var(--accent);
+  color: var(--text-color);
+  border: none;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.catalog__btn {
+  padding: 6px 22px;
+  border: none;
+  border-radius: 6px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  text-align: center;
+  background: var(--main-background-color);
+  color: var(--main-text-color);
+  -webkit-transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: box-shadow, color, background-color;
+  transition-property: box-shadow, color, background-color, -webkit-box-shadow;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.catalog__btn:hover, .catalog__btn:focus {
+  background: var(--accent);
+  color: var(--secondary-background-color);
+  cursor: pointer;
+  -webkit-box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+}
+
+.catalog__all-btn {
+  padding: 6px 22px;
+  border: none;
+  border-radius: 6px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  text-align: center;
+  background: var(--accent);
+  color: var(--text-color);
+  -webkit-transition-property: color,background-color,-webkit-box-shadow;
+  transition-property: color,background-color,-webkit-box-shadow;
+  transition-property: box-shadow,color,background-color;
+  transition-property: box-shadow,color,background-color,-webkit-box-shadow;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.catalog__all-btn:hover, .catalog__all-btn:focus {
+  background: var(--main-background-color);
+  color: var(--main-text-color);
+  cursor: pointer;
+  -webkit-box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.12);
+}
+
+.social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: #AFB1B8;
+  width: 44px;
+  height: 44px;
+  background-color: var(--secondary-background-color);
+  border-radius: 50%;
+  -webkit-transition-property: background-color,fill;
+  transition-property: background-color,fill;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.social__link:hover {
+  background-color: var(--accent);
+  fill: var(--secondary-background-color);
+}
+
+.social__link:focus {
+  background-color: var(--accent);
+  fill: var(--secondary-background-color);
+}
+
+.social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social {
+  margin-top: 0;
+  margin-right: 109px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: inline-block;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.social__text {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 700;
+  letter-spacing: 00.03em;
+  text-transform: uppercase;
+  color: var(--text-color);
+}
+
+.social__link--footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: var(--text-color);
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.social__link--footer:hover {
+  background-color: var(--accent);
+}
+
+.social__link--footer:focus {
+  background-color: var(--accent);
+}
+
+.header__logo {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 93px;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--accent);
+  text-decoration: none;
+}
+
+.header__colortext {
+  color: var(--main-text-color);
+}
+
+.footer__logo {
+  margin-bottom: 20px;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--accent);
+  text-decoration: none;
+}
+
+.footer__colortext {
+  color: var(--text-color);
+}
+
+.backdrop {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  -webkit-transition: opacity var(--timing-function) var(--transition-duration);
+  transition: opacity var(--timing-function) var(--transition-duration);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  padding: 40px;
+  display: block;
+  text-align: center;
+  min-width: 528px;
+  min-height: 581px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.modal-button {
+  position: absolute;
+  top: 17px;
+  right: 17px;
+  background-color: var(--secondary-background-color);
+  color: rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border-color: rgba(0, 0, 0, 0.1);
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+  cursor: pointer;
+}
+
+.modal-button:hover {
+  fill: var(--accent);
+}
+
+.modal-button:focus {
+  fill: var(--accent);
+}
+
+.form-title {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  color: #212121;
+  line-height: 1.2;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 12px;
+}
+
+.modal-form {
+  display: block;
+  text-align: center;
+}
+
+.modal-field {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 10px;
+}
+
+.form-icon {
+  position: absolute;
+  top: 55%;
+  left: 15px;
+  fill: #212121;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #757575;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 3%;
+  outline: transparent;
+  border: solid 1px rgba(33, 33, 33, 0.2);
+  -webkit-transition-property: border-color;
+  transition-property: border-color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.modal-input:hover {
+  border-color: var(--accent);
+}
+
+.modal-input:focus {
+  border-color: var(--accent);
+}
+
+.modal-input:hover + .form-icon {
+  fill: var(--accent);
+}
+
+.modal-input:focus + .form-icon {
+  fill: var(--accent);
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.modal-area {
+  width: 100%;
+  height: 120px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  resize: none;
+  border-radius: 3%;
+  outline: transparent;
+  border: solid 1px rgba(33, 33, 33, 0.2);
+  -webkit-transition-property: border-color;
+  transition-property: border-color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.modal-area:focus {
+  border-color: var(--accent);
+}
+
+.modal-area:hover {
+  border-color: var(--accent);
+}
+
+.form-text {
+  margin-left: 8.38px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: var(--secondary-text-color);
+}
+
+.form-link {
+  color: var(--accent);
+}
+
+.checkbox-field {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: absolute;
+}
+
+.checkbox:hover + .agreement-icon {
+  border-color: var(--secondary-accent);
+}
+
+.checkbox:focus + .agreement-icon {
+  border-color: var(--secondary-accent);
+}
+
+.checkbox:checked + .agreement-icon {
+  background-color: var(--accent);
+  border: none;
+}
+
+.agreement-icon {
+  border: 1px solid #212121;
+  display: inline-block;
+  top: 16%;
+  left: -1px;
+  -webkit-transition-property: border-color;
+  transition-property: border-color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.form-button {
+  width: 200px;
+  height: 50px;
+  padding-left: 56px;
+  padding-right: 55px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: var(--accent);
+  color: var(--text-color);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.9;
+  border-style: none;
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--timing-function);
+          transition-timing-function: var(--timing-function);
+}
+
+.form-button:hover {
+  background-color: var(--secondary-accent);
+}
+
 .header {
   background-color: var(--text-color);
   border-bottom: 1px solid var(--border-color);
