--- a/css/main.css
+++ b/css/main.css
@@ -727,7 +727,7 @@ ul {
   width: 1600px;
   background-color: var(--additional-color);
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/hero-img.jpg);
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
