--- a/css/main.css
+++ b/css/main.css
@@ -726,7 +726,8 @@ ul {
 .hero {
   width: 1600px;
   background-color: var(--additional-color);
-  background-image: url(/images/hero-img.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/hero-img.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
