--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -14,7 +14,7 @@
     width: 1600px;
     background-color: var(--additional-color);
     background-image:
-    
+    linear-gradient(to right, rgba(47,48,58,0.4), from left rgba(47,48,58,0.4)),
     url(/images/hero-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
