--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,7 +16,7 @@
     //background-image:
     //linear-gradient (to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4),
     //url(/images/hero-img.jpg);
-    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-img.jpg);
+    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:1600px;
